# CnC_Remastered_Multiplatform

./: .gitignore  .travis.yml  README.md  azure-pipelines.yml
REDALERT/: B64PIPE.CPP  B64PIPE.H  B64STRAW.H  BAR.H  BASE64.CPP  BUFF.CPP  BUFF.H  CCFILE.H  CMakeLists.txt  CONQUER.CPP  COORDA.h  CRC.CPP  CRC.H  CRCPIPE.H  CRCSTRAW.H  DEFINES.H  FUNCTION.H  HEAP.H  INI.CPP  INI.H  INT.H  JSHELL.H  LANGUAGE.H  LCWPIPE.H  LCWSTRAW.H  LISTNODE.H  LZO.H  LZO1X.H  LZO1X_C.CPP  LZO1X_D.CPP  LZOPIPE.CPP  LZOPIPE.H  LZOSTRAW.CPP  LZOSTRAW.H  LZW.CPP  LZW.H  LZWOTRAW.CPP  LZWPIPE.H  LZWSTRAW.CPP  LZWSTRAW.H  (+21 more)
TIBERIANDAWN/: ANIM.H  BUILDING.H  BULLET.H  DEFINES.H  DLLInterface.cpp  RADAR.H  TERRAIN.H  UDATA.CPP  UNIT.H  VECTOR.H
TIBERIANDAWN/WIN32LIB/: FACINGFF.h
scripts/: build_windows.ps
